fix: spacing issues

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -20,7 +20,7 @@
   }
 
   .section-height {
-    @apply min-h-dvh lg:max-h-[1000px];
+    @apply min-h-screen lg:max-h-[1000px];
     /* min-height: 100dvh;
     max-height: 1000px; */
   }
